# ArtistMarketWASM

./: README.md
.github/workflows/: api-gateway.build.yml  api-gateway.release.yml  apigateway_build.yml  apigateway_release.yml  auth_build.yml  auth_release.yml  build.yml  release.yml  ui.build.yml  ui.release.yml
.github/workflows/api-gateway/: release.yml
.github/workflows/ui/: build.yml  release.yml
Backend/APIGateway/api-gateway/: Cargo.toml  Makefile  README.md  wasmcloud.toml
Backend/artistmarket/: Cargo.toml  Makefile  README.md  wasmcloud.toml
Backend/artistmarket/src/: lib.rs
Backend/thehaven-apigateway/: Cargo.toml  Makefile  README.md  wasmcloud.toml
Backend/thehaven-apigateway/src/: lib.rs
Backend/thehaven-auth/: Cargo.toml  Makefile  README.md  cargotree.txt  wasmcloud.toml
Backend/thehaven-auth/src/: lib.rs
Backend/thehaven-auth/src/models/: mod.rs
Backend/thehaven-auth/src/models/dbModels/: role.rs  user.rs
Backend/thehaven-auth/src/models/db_models/: role.rs  user.rs
Backend/thehaven-auth/src/models/dtos/: mod.rs  roledto.rs  userdto.rs
Frontend/UI/: Cargo.toml  Makefile  wasmcloud.toml
Frontend/UI-Actor/: README.md
Frontend/UI/src/: lib.rs
Interfaces/thehaven-interfaces/: Makefile  auth.smithy  codegen.toml
Interfaces/thehaven-interfaces/rust/: Cargo.toml
Interfaces/thehaven-interfaces/rust/src/: auth.rs  lib.rs
