[package]
name = "thehaven_apigateway"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "thehaven_apigateway"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
wasmcloud-interface-logging = "0.8"
thehaven_interfaces = { path = "../../Interfaces/thehaven-interfaces/rust" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.68"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
